--- a/app/src/main/res/layout/view_location.xml
+++ b/app/src/main/res/layout/view_location.xml
@@ -20,6 +20,7 @@
         app:layout_constraintVertical_bias="0.072" />
 
     <ListView
+        android:id="@+id/list_view"
         android:layout_width="409dp"
         android:layout_height="495dp"
         android:layout_marginStart="8dp"
