--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#34a9b8</color>
     <color name="primaryColor">#253545</color>
     <color name="primaryLightColor">#4f5f70</color>
     <color name="primaryDarkColor">#000e1e</color>
